[package]
name = "sla"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sla"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
bytemuck = "1.7.3"
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
solana-program = "1.8.9"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
mpl-candy-machine = { git = "https://github.com/metaplex-foundation/metaplex-program-library", branch = "master", features = [ "no-entrypoint", "cpi" ] }