[package]
name = "sla-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sla_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
metaplex-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
solana-program = "1.9.4"